include/bqp.h


struct bqp_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int start_print;
    int stop_print;
    int print_gap;
    int maxit;
    int cold_start;
    int ratio_cg_vs_sd;
    int change_max;
    int cg_maxit;
    int sif_file_device;
    real_wp_ infinity;
    real_wp_ stop_p;
    real_wp_ stop_d;
    real_wp_ stop_c;
    real_wp_ identical_bounds_tol;
    real_wp_ stop_cg_relative;
    real_wp_ stop_cg_absolute;
    real_wp_ zero_curvature;
    real_wp_ cpu_time_limit;
    bool exact_arcsearch;
    bool space_critical;
    bool deallocate_error_fatal;
    bool generate_sif_file;
    char sif_file_name[31];
    char prefix[31];
    struct sbls_control_type sbls_control;
};
struct bqp_time_type {
    real_sp_ total;
    real_sp_ analyse;
    real_sp_ factorize;
    real_sp_ solve;
};
struct bqp_inform_type {
    int status;
    int alloc_status;
    int factorization_status;
    int iter;
    int cg_iter;
    real_wp_ obj;
    real_wp_ norm_pg;
    char bad_alloc[81];
    struct bqp_time_type time;
    struct sbls_inform_type sbls_inform;
};
void bqp_initialize( void **data, 
                     struct bqp_control_type *control,
                     int *status );
void bqp_read_specfile( struct bqp_control_type *control, 
                        const char specfile[] );
void bqp_import( struct bqp_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 const char H_type[], 
                 int ne, 
                 const int H_row[],
                 const int H_col[], 
                 const int H_ptr[] );
void bqp_import_without_h( struct bqp_control_type *control,
                           void **data,
                           int *status,
                           int n );
void bqp_reset_control( struct bqp_control_type *control,
                        void **data,
                        int *status );
void bqp_solve_given_h( void **data,
                        int *status,
                        int n, 
                        int h_ne,
                        const real_wp_ H_val[], 
                        const real_wp_ g[], 
                        const real_wp_ f, 
                        const real_wp_ x_l[], 
                        const real_wp_ x_u[], 
                        real_wp_ y[], 
                        real_wp_ z[], 
                        int x_stat[] );
void bqp_solve_reverse_h_prod( void **data,
                                int *status,
                                int n, 
                                const real_wp_ g[], 
                                const real_wp_ f, 
                                const real_wp_ x_l[], 
                                const real_wp_ x_u[], 
                                real_wp_ y[], 
                                real_wp_ z[], 
                                int x_stat[],
                                real_wp_ v[], 
                                const real_wp_ prod[],
                                int nz_v[], 
                                int *nz_v_start, 
                                int *nz_v_end,
                                const int nz_prod[], 
                                int nz_prod_end );
void bqp_information( void **data,
                      struct bqp_inform_type *inform,
                      int *status );